--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,12 @@
 body {
-    background-color: white;
-    color: #212121;
-    font-family: Roboto, sans-serif;
-    font-weight: 400;
-    letter-spacing: 0.03em;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height, or 150% */
+  
+  letter-spacing: 0.02em;
+  
+  color: #000000;
   }
