--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+:root{
+  
+}
 body {
   font-family: 'Roboto';
   font-style: normal;
@@ -8,5 +11,5 @@ body {
   
   letter-spacing: 0.02em;
   
-  color: #000000;
+  color: #434455 ;
   }
