--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,15 @@
 :root{
-  
+  css declarations;
 }
 body {
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   /* identical to box height, or 150% */
-  
   letter-spacing: 0.02em;
-  
   color: #434455 ;
+  background-color: #FFFFFF
   }
+S
