--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   css declarations;
 }
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family:sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -10,6 +10,6 @@ body {
   /* identical to box height, or 150% */
   letter-spacing: 0.02em;
   color: #434455 ;
-  background-color: #FFFFFF
+  background-color: #FFFFFF  
   }
 S
