--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,7 @@
   css declarations;
 }
 body {
-  font-family:sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  /* identical to box height, or 150% */
-  letter-spacing: 0.02em;
-  color: #434455 ;
+  font-family: 'Roboto', sans-serif;
+ color: #434455 ;
   background-color: #FFFFFF  
   }
-S
