--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 :root{
   css declarations;
 }
-body {
+body { 
+  background-color: #FFFFFF;  
   font-family: 'Roboto', sans-serif;
- color: #434455 ;
-  background-color: #FFFFFF  
+  color: #434455;
   }
