--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,21 @@
-:root{
-  css declarations;
+:root {
 }
+
 body { 
-  background-color: #FFFFFF;  
-  font-family: 'Roboto', sans-serif;
-  color: #434455;
-  }
+background-color: #ffffff; 
+font-family: 'Roboto', sans-serif;
+color: #434455;
+}
+.navigation {
+font-family: 'Raleway';
+font-style: normal;
+font-weight: 800;
+font-size: 18px;
+line-height: 21px;
+/* identical to box height, or 117% */
+display: flex;
+align-items: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #4D5AE5;
+}
