--- a/css/styles.css
+++ b/css/styles.css
@@ -19,3 +19,13 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4D5AE5;
 }
+.menu {
+  list-style: none;
+}
+.menu-nav {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
