--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 :root {
+
 }
 
 body { 
@@ -6,15 +7,12 @@ background-color: #ffffff;
 font-family: 'Roboto', sans-serif;
 color: #434455;
 }
-.navigation {
+.logo {
 font-family: 'Raleway';
 font-style: normal;
 font-weight: 800;
 font-size: 18px;
-line-height: 21px;
-/* identical to box height, or 117% */
-display: flex;
-align-items: center;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4D5AE5;
