--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,15 @@ color: #4D5AE5;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+.logotip {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #f4f4fd;
+}
+.back {
+  background-color: #2e2f42;
+}
