--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,16 @@ background-color: #ffffff;
 font-family: 'Roboto', sans-serif;
 color: #434455;
 }
+.link {
+  text-decoration: none;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #f4f4fd;
+}
 .menu {
   list-style: none;
 }
@@ -16,14 +26,8 @@ color: #434455;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.logotip {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #f4f4fd;
+.logo {
+  
 }
 .back {
   background-color: #2e2f42;
