--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,4 @@
 :root {
-  --logo_color: blue;
-
-
 }
 body { 
 background-color: #ffffff; 
@@ -19,7 +16,7 @@ color: #434455;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #f4f4fd;
+  color: #4d5ae5;
   list-style: none;
 }
 .menu {
@@ -32,7 +29,7 @@ color: #434455;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.logo {
+.logo-four {
 color:  #f4f4fd;
 }
 .back {
