--- a/css/styles.css
+++ b/css/styles.css
@@ -1,122 +1,186 @@
 :root {
-}
-body { 
-background-color: #ffffff; 
-font-family: 'Roboto', sans-serif;
-color: #434455;
-}
-.section {
-  background-color: #2e2f42;
-  font-size: 56px;
-  line-height: 1.07;
-  text-align: center;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-}
-.button-two {
-  background-color: #4D5AE5;
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #ffffff;
-  cursor: pointer;
-}
-.button-two:hover,
-.button-two:focus {
-  background-color: #404BBF;
-}
-.menu {
-  list-style: none;
-}
-.menu-nav {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
+  --main-text-color:#2E2F42;
+  --scnd-text-color: #F4F4FD;
+  --contacts-link-color: #434455;
 }
 
-/* Portfolio */
-.smm{
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
+body {
+  font-family: 'Roboto', sans-serif; 
+  color: var(--contacts-link-color);
+  background: #FFFFFF;
 }
-.paragraph {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-.main-one {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-.main-one:hover,
-.main-one:focus {
-  color: #404bbf;
-}
-.adress {
-  font-style: normal;
-}
-.mail {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-.mail:hover,
-.mail:focus {
-color: #404bbf;
-} 
-.list{
-  list-style: none;
-  }
+
 .link {
   text-decoration: none;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
+}
+
+.list {
   list-style: none;
 }
-.logo-tree {
-  color: #2e2f42;
+
+.header-logo {
+  font-family: 'Raleway', sans-serif;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 18px;
+      line-height: 1.17;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      color: #4D5AE5;
 }
-.logo-four {
-color:  #f4f4fd;
+
+.header-logo span {
+  color: #2E2F42;
 }
-.back {
-  background-color: #2e2f42;
+
+.header-menu-link {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      color: var(--main-text-color);
 }
-.button {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
+
+.header-menu-link:hover, .header-menu-link:focus {
+  color: #404BBF;
+}
+
+.contacts {
+  font-style: normal;
+}    
+
+.contacts-link {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      color: var(--contacts-link-color);
+}
+
+.contacts-link:hover, .contacts-link:focus {
+  color: #404BBF;
+}
+
+.smm-ttl {
+font-style: normal;
+font-weight: 700;
+font-size: 56px;
+line-height: 1.07;
+text-align: center;
+letter-spacing: 0.02em;
+color: #FFFFFF;}
+
+.main {
+  background-color: #2E2F42;
+}
+
+.main-btn {
+  font-family: inherit;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      background: #4D5AE5;
+      color: #FFFFFF;
+      cursor: pointer;
+}
+
+.main-btn:hover, .hero-btn:focus {
+  background: #404BBF;
+}
+
+.prtfl-btn {
+  font-family: inherit;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      background: #F4F4FD;
+      color: #4D5AE5;
+      cursor: pointer;
+}
+
+.prtfl-btn:hover, .prtfl-btn:focus {
+  background: #404BBF;
+  color: #FFFFFF;
+}
+
+
+
+.item-text {
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #4d5ae5;
-  background-color: #f4f4fd;
-  cursor: pointer;
-}
-.button:hover,
-.button:focus {
-  color: #FFFFFF;
-  background-color: #404BBF;
-
-}
-.text {
-  line-height: 1.5;
-  color: #f4f4fd;
   letter-spacing: 0.02em;
+  color: var(--contacts-link-color);
+}
+
+.team-list-item {
+  background-color: #FFFFFF;
+}
+
+.text-pf {
+  font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      color: var(--contacts-link-color);
+}
+
+.scnd-ttl {
+      font-style: normal;
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 1.11;
+      text-align: center;
+      letter-spacing: 0.02em;
+      text-transform: capitalize;
+      color: var(--main-text-color);
+      }
+
+.thrd-ttl {
+  font-style: normal;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+      color: var(--main-text-color);
+}
+
+.scnd-ttl-pf {
+  font-style: normal;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+      color: var(--main-text-color);
+}
+
+.back {
+  background: #2E2F42;
+}
+
+.back-logo {
+  font-family: 'Raleway', sans-serif;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 18px;
+      line-height: 1.17;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      color: #4D5AE5;
+}
+
+.back-logo span {
+  color: #F4F4FD
+}
+
+.back-text {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      color: var(--scnd-text-color);
 }
