--- a/css/styles.css
+++ b/css/styles.css
@@ -122,8 +122,9 @@ color: #FFFFFF;}
 }
 
 .text-pf {
-  font-size: 16px;
-      line-height: 1.5;
+  font-weight: 500;
+  font-size: 20px;
+      line-height: 1.2;
       letter-spacing: 0.02em;
       color: var(--contacts-link-color);
 }
