--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ body {
   color: var(--main-text-color);
 }
 
-.scnd-ttl-pf {
+.scond-ttl-pf {
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
