--- a/css/styles.css
+++ b/css/styles.css
@@ -193,3 +193,11 @@ body {
 .team {
   background: #F4F4FD;
 }
+.portfolio-item {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
+}
